--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
     </section>
 
-    <section class="footer">
+    <div class="footer">
         <div class="container">
 
                 <div class="logo-with-icons">
@@ -189,7 +189,7 @@
                     <li class="copyright">© Easybank. All Rights Reserved</li>
                 </ul>
         </div>
-    </section>
+    </div>
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
