--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p>Take your financial life online. Your Easybank account <span class="break-2"> will be a one-stop-shop 
                     for spending, saving, </span> budgeting, investing, and much more.</p>
 
-                <button id="request-invite" class="custom-button">Request Invite</button>    
+                <button class="custom-button">Request Invite</button>    
             </div>
         </div>
     </section>
@@ -185,7 +185,7 @@
                 </div>
 
                 <ul class="copyright-section">
-                    <li><button id="request-invite" class="custom-button">Request Invite</button></li>
+                    <li><button class="custom-button">Request Invite</button></li>
                     <li class="copyright">© Easybank. All Rights Reserved</li>
                 </ul>
         </div>
